# oubliette

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
src/: archive.rs  builder.rs  codec.rs  lib.rs  util.rs
