[package]
name = "oubliette-cli"
version = "0.1.0"
authors = ["Wim Looman <oubliette.crate@nemo157.com>"]
edition = "2018"
description = "⋮"
license = "MIT OR Apache-2.0"

[[bin]]
name = "oubliette"
path = "src/main.rs"

[dependencies]
oubliette.version = "0.1.0"
oubliette.path = ".."
oubliette.default-features = false
structopt.version = "0.3.20"
structopt.default-features = false
structopt.features = ["color"]
anyhow.version = "1.0.33"
anyhow.default-features = false
anyhow.features = ["std"]
